class/Image_Engineering_F/comp.txt
houghline2.cpp: In function ‘int main(int, char**)’:
houghline2.cpp:18:60: error: cannot convert ‘CvSeq*’ to ‘double’ for argument ‘3’ to ‘void cv::HoughLines(cv::InputArray, cv::OutputArray, double, double, int, double, double)’
   cv::HoughLines(chg_img, chg_img,lines, 1, CV_PI / 180, 50);
                                                            ^
houghline2.cpp:21:5: error: ‘Lines’ is not a member of ‘cv’
     cv::Lines (shw_img, point[0], point[1], CV_RGB (255, 0, 0), 3, 8, 0);
     ^
